--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 20px;
+}
+
+*, *::before, *::after {
+  -webkit-box-sizing: border-box; 
+  box-sizing: border-box; 
+}
+
+:focus, :active {
+  outline: none;
+}
+
+a:focus, a:active {
+  outline: none;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+a, a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+}
+
+
+h2 {
+  font-family: 'Heebo', sans-serif;
   text-align: center;
+  text-transform: uppercase;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  width: 80%;
+  margin: auto;
+  padding: 20px 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.btn {
+  text-transform: uppercase;
+  padding: 5px;
+  letter-spacing: 1px;
+  border-radius: 5px;
   color: white;
+  background-color: rgba(5, 6, 7, 0.7);
+  transition: .4s;
+}
+.btn:hover {
+  opacity: .6;
+  transform: scale(1.1);
 }
 
-.App-link {
-  color: #61dafb;
+.fnt {
+  letter-spacing: 1.5px;
+  font-weight: 500;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.picture {
+  width: 100%;
+  cursor: pointer;
 }
+
+
+
